# Prediction-of-Stellarium-positions

./: .gitignore  CLAUDE.md  FUTURE_PROPHETIC_EVENTS.md  PROPHETIC_EVENTS.md  README.md  SETUP.md  pyproject.toml
config/: mcp_servers.json
src/: __init__.py  main.py
src/agents/: __init__.py  orchestrator.py
src/database/: __init__.py  categories.py  setup.py
src/mcp_servers/: __init__.py  scripture_server.py  stellarium_server.py
src/utils/: __init__.py
tests/: __init__.py  test_scripture_server.py  test_stellarium_server.py
