[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prophecy-vision"
version = "0.1.0"
description = "Connect Biblical Prophecy with Astronomical Visualization using Stellarium"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ProphecyVision Team"}
]
keywords = ["astronomy", "bible", "prophecy", "stellarium", "mcp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "skyfield>=1.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
sword = [
    "pysword>=0.2.0",
]
tauri = [
    "pywebview>=5.0.0",
]

[project.scripts]
prophecy-vision = "src.main:main"
stellarium-mcp = "src.mcp_servers.stellarium_server:mcp.run"
scripture-mcp = "src.mcp_servers.scripture_server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
